# aiodeepseek

./: .gitignore  MANIFEST.in  README.md  ask_img.py  main.py  pyproject.toml  reg.py  requirements.txt  setup.py  test.py
.github/workflows/: build.yml
aiodeepseek/: __init__.py  client.py  conversation.py  http.py  log.py  pow.py
aiodeepseek/clients/: __init__.py  auth.py  base.py  chat.py  client.py  files.py
aiodeepseek/data/: constants.py  device_ids.py
aiodeepseek/http/: __init__.py  _config.py  _sse.py  session.py
aiodeepseek/http/session/: __init__.py  base.py  chat.py  files.py
aiodeepseek/pow/: _pow.cpp  _pow.pyi  _pow_py.py  pow.py
aiodeepseek/types/: enums.py  exceptions.py  models.py
aiodeepseek/types/exceptions/: __init__.py  _classes.py  _recognition.py
aiodeepseek/types/models/: _classes.py  _model_utils.py  classes.py
docs/: build.txt
docs/en/: README.md  client.md  conversation.md  exceptions.md  pow.md  types.md
docs/ru/: README.md  client.md  conversation.md  exceptions.md  pow.md  types.md
inspect_api/: ask_img.py  device_id.py  farm_devices.py  multi.py  pow_test.py  reg.py
