[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "aiodeepseek"
version = "0.0.2b"
requires-python = ">=3.9"
dependencies = ["aiohttp>=3.9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aiodeepseek*"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = ["*-musllinux_i686", "*-manylinux_i686", "pp*"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
